update jekyll, css, image url, add new post

--- a/_posts/2018-01-10-ms-office-라이선스-관리.markdown
+++ b/_posts/2018-01-10-ms-office-라이선스-관리.markdown
@@ -10,7 +10,7 @@ categories: etc
 Office 365 비즈니스는 사용자당 월 9,300원이고, Office 2016 패키지는 20만원 초반대에 오픈마켓에서 구매 가능하다.
 2 년 이상 사용한다고 가정하면 패키지가 저렴하다.
 개인적으로는, Office 365를 사용하기를 추천한다. 관리가 더 쉽기 때문이다.
-하지만, 한 푼이라도 아끼려면 둘을 비교해보고 결정해야 한다.
+이제는 Office를 새로 살 경우에는 Office 365를 선택할 생각이다.
 
 #### MS Office 2016 라이선스 관리 규칙
 라이선스 관리는 제품번호 끝자리로 해야한다.
