--- a/_posts/2017-12-13-facebook-픽셀-사용기.markdown
+++ b/_posts/2017-12-13-facebook-픽셀-사용기.markdown
@@ -4,22 +4,22 @@ title:  "facebook-픽셀-사용기"
 categories: marketing
 ---
 
-#### facebook 픽셀?
+### facebook 픽셀?
 facebook으로 광고를 돌리다 보면, 기본 기능의 한계를 느낄 수 있다.
 결국은 디테일한 설정들이 필요해지는데, 이 때 facebook 픽셀을 사용하면 된다.
 Google Analytics처럼 코드를 삽입해두면 트래킹이 되는 형식이다.
 facebook 픽셀을 심어놓으면, 다양한 트래킹이 가능해지고, 광고 최적화가 가능해진다.
 
-#### facebook 픽셀로 디테일한 설정하기
+### facebook 픽셀로 디테일한 설정하기
 오랜만에 facebook 픽셀을 수정하려고 들어갔더니, 많이 바뀐 것 같다.
 예전에는 gui로 다양한 것들이 가능했던 것 같은데, 찾을 수 없었다.
 하지만 googling해서 스크립트를 적용시켜보니, 수동으로 달아주는 태그들은 아직도 잘 동작했다.
 
-#### 전체 웹페이지에서 불러오는 코드 설치
+### 전체 웹페이지에서 불러오는 코드 설치
 기본적인 픽셀 코드는 전체 application에 적용되도록 해놓은 상태였다.
 만약, 해당 코드가 없다면, 전체 application에서 불러오도록 설정해주어야 한다.
 예를 들면, 다음과 같은 코드이다.
-~~~
+{% highlight html %}
 <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -35,25 +35,25 @@ fbq('track', "PageView");
 src="https://www.facebook.com/tr?id=<FB_PIXEL_ID>&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->  
-~~~
+{% endhighlight %}
 
-#### elements에 events 추가하기
+### elements에 events 추가하기
 예를 들면 다음과 같은 script를 추가하면 된다.
-~~~
+{% highlight javascript %}
 fbq('track', 'Purchase', {currency: 'EUR', value: 15.23});
-~~~
+{% endhighlight %}
 위의 코드는 \'구매\'를 추적하는 코드이다. 화폐 단위는 유로화, 값은 15.23라는 뜻이다.
 실제 적용을 위해서는 페이지에 스크립트를 추가해주면 된다.
 특정 element를 클릭하면 event를 감지하는 코드를 만든다면,
-~~~
+{% highlight html %}
 <a href="#" id="#" onclick="fbq('track', 'Purchase', {currency: 'EUR', value: 15.23});">링크</a>
-~~~
+{% endhighlight %}
 위와 같다.
 Parameters에 대한 정보, 더 자세한 내용은 다음 링크에서 참고하면 된다.<br>
 <https://developers.facebook.com/docs/ads-for-websites/pixel-events/v2.11>
 
-#### 페이스북 픽셀 활용하기
-![페이스북 픽셀 설치 결과]({{ site.url }}/assets/img/2017-12-13/01.png)<br>
+### 페이스북 픽셀 활용하기
+![페이스북 픽셀 설치 결과]({{ "/assets/img/2017-12-13/01.png" | relative_url }})<br>
 픽셀 설치, 이벤트 설정이 끝났다면 수 분 뒤에 facebook 픽셀에서 이벤트가 측정되기 시작한다.
 이제, facebook 광고를 돌릴 때 목표로 해당 이벤트를 사용할 수도 있고, facebook analytics를 통해 이벤트를 분석해볼 수도 있다.
 
