--- a/_posts/2018-01-10-ms-office-라이선스-관리.markdown
+++ b/_posts/2018-01-10-ms-office-라이선스-관리.markdown
@@ -9,7 +9,8 @@ categories: etc
 그 이유는, MS Office 2016이 생각보다 저렴하기 때문이다.
 Office 365 비즈니스는 사용자당 월 9,300원이고, Office 2016 패키지는 20만원 초반대에 오픈마켓에서 구매 가능하다.
 2 년 이상 사용한다고 가정하면 패키지가 저렴하다.
-개인적으로는, Office 365를 사용하기를 추천한다. 관리가 더 쉽기 때문이다.
+
+하지만 개인적으로는, Office 365를 사용하기를 강력히 추천한다. 관리가 더 쉽기 때문이다.
 이제는 Office를 새로 살 경우에는 Office 365를 선택할 생각이다.
 
 ### MS Office 2016 라이선스 관리 규칙
@@ -46,5 +47,5 @@ unkey 뒤의 *****에 기존 키의 뒷 5자리를 넣어서 인증을 해제하
 
 새로운 제품키를 넣어주면 된다.
 
-참고<br>
+#### 참고
 <https://answers.microsoft.com/ko-kr/msoffice/forum/msoffice_install-mso_win10-mso_2016/%EC%98%A4%ED%94%BC%EC%8A%A4-2016-%ED%99%88/d8f8af7c-53d9-4c4f-a168-f56e3e062441>
