change unbuild post

--- a/_posts/2018-06-11-heroku에서-루트-도메인-사용하기.markdown
+++ b/_posts/2018-06-11-heroku에서-루트-도메인-사용하기.markdown
@@ -29,9 +29,7 @@ gabia를 사용하면 문제 해결.
 godaddy에서는 CNAME은 제공하지 않지만 대안으로 포워딩을 사용할 수 있다.
 도메인의 DNS 설정에서 루트 도메인을 www.example.com 과 같은 www 도메인으로 포워딩을 해주면, 루트 도메인으로도 해당 사이트에 접속이 된다.(물론, www로 redirect된다.)
 
-* 18.09.06 업데이트: CNAME에 zone apex가 들어갈 경우, MX 설정에 문제를 일으킬 수 있다.
-대부분의 메일 서비스에서 오는 메일은 잘 수신 되지만, 몇몇의 경우 제대로 전송되지 않는 문제가 발견되었다.
-해결방안으로, ANAME이나 ALIAS Record를 지원하는 DNS를 사용하는 방법을 사용했다.
+* 18.09.06 업데이트: CNAME에 zone apex가 들어갈 경우, MX 설정에 문제를 일으킬 수 있다. 대부분의 메일 서비스에서 오는 메일은 잘 수신 되지만, 몇몇의 경우 제대로 전송되지 않는 문제가 발견되었다. 해결방안으로, ANAME이나 ALIAS Record를 지원하는 DNS를 사용하는 방법을 사용했다.
 
 #### 참고
 <http://seapy.com/2079><br>
