--- a/_posts/2018-09-18-DMARC-리포트.markdown
+++ b/_posts/2018-09-18-DMARC-리포트.markdown
@@ -4,7 +4,7 @@ title:  "DMARC 리포트"
 categories: etc
 ---
 
-#### DMARC
+# DMARC
 
 DMARC: <https://dmarc.org/>
 
@@ -17,7 +17,7 @@ rua 옵션을 설정해 놓았을 경우, 리포트를 메일로 보내준다.
 xml 파일로 온 실제 리포트를 단락씩 가져왔다.
 각 라인에 주석으로 다음 줄의 의미를 적어놓았다.
 
-#### 메타데이터
+# 메타데이터
 
 {% highlight xml %}
 <report_metadata>
@@ -34,7 +34,7 @@ xml 파일로 온 실제 리포트를 단락씩 가져왔다.
 </report_metadata>
 {% endhighlight %}
 
-#### 발행되어있는 정책
+# 발행되어있는 정책
 
 설정되어있는 정책. 본인 혹은 동료가 설정해놓은 것이다.
 
@@ -58,7 +58,7 @@ xml 파일로 온 실제 리포트를 단락씩 가져왔다.
 
 {% endhighlight %}
 
-#### 레코드
+# 레코드
 
 레코드는 여러개가 있을 수 있다.
 메일 서버가 여러개라면 여러개의 레코드가 나온다.
