--- a/_posts/2019-02-11-네이버웹마스터도구.markdown
+++ b/_posts/2019-02-11-네이버웹마스터도구.markdown
@@ -4,7 +4,7 @@ title: "네이버웹마스터도구"
 categories: marketing
 ---
 
-#### 네이버웹마스터도구
+# 네이버웹마스터도구
 
 한국에서 웹사이트를 운영하려면 필수적으로 고려해야할 것은 '네이버 검색에 얼마나 잘 노출이 되는가'이다.
 예전에는 사용자 등록 형태로 웹사이트를 등록할 수 있었지만, 이제는 구글처럼 로봇에 의해 검색 등록이 된다.
@@ -12,7 +12,7 @@ categories: marketing
 네이버에서는 내 웹사이트가 검색엔진에 얼마나 최적화되었는지 알려준다.
 네이버웹마스터도구를 활용하면 이런 정보를 얻을 수 있다.
 
-#### 사이트 등록하기
+# 사이트 등록하기
 
 <https://webmastertool.naver.com/>
 
@@ -21,7 +21,7 @@ categories: marketing
 
 ![연동 사이트 목록]({{ "/assets/img/2019-02-11/1.png "}})
 
-#### 사이트 최적화
+# 사이트 최적화
 
 네이버웹마스터도구에서는 검색엔진 사이트 최적화 정도를 한 눈에 보여준다.
 
@@ -29,7 +29,7 @@ categories: marketing
 
 이를 통해서 대략적인 웹사이트의 현황을 파악할 수 있다.
 
-#### 검색 로봇 수집
+# 검색 로봇 수집
 
 네이버의 검색 로봇이 웹사이트를 수집하는데 문제가 있는 부분을 알려준다.
 
@@ -37,7 +37,7 @@ categories: marketing
 
 robots.txt와 site map이 제대로 수집 되는지, 메타 태그가 적절한지, 로봇이 실제 수집하는 데 오류는 없는지 등을 알려준다.
 
-#### 콘텐츠 관리
+# 콘텐츠 관리
 
 검색 로봇이 콘텐츠를 수집하기 용이한지를 판단해서 알려준다.
 
@@ -47,7 +47,7 @@ robots.txt와 site map이 제대로 수집 되는지, 메타 태그가 적절한
 웹 페이지의 제목이 없거나, 동일한 페이지가 몇 퍼센트인지도 알려준다.
 웹 페이지의 제목들이 서로 달라야 검색 로봇이 좋아한다.
 
-#### 사이트 구조
+# 사이트 구조
 
 HTML structure를 검색 로봇이 파악하기에 용이한지 알려준다.
 
@@ -56,7 +56,7 @@ HTML structure를 검색 로봇이 파악하기에 용이한지 알려준다.
 HTML 구조는 제대로 되어 있는지, 링크 형식은 올바른지, 웹과 모바일 모두 잘 대응이 되어있는지를 알려준다.
 (링크 관리의 느낌표는 a tag에 javascript를 사용하여 나타나는 것으로 보인다.)
 
-#### 사이트 활성화
+# 사이트 활성화
 
 사이트가 얼마나 활성화 되어있는지를 알려준다.
 
@@ -65,7 +65,7 @@ HTML 구조는 제대로 되어 있는지, 링크 형식은 올바른지, 웹과
 구글 검색엔진때문에 유명해진 '백링크'이다.
 다른 웹사이트들에서 얼마나 우리 사이트로 링크를 거는지를 판단한다.
 
-#### 참고
+# 참고
 
-<https://support.webmastertool.naver.com/><br />
-<https://webmastertool.naver.com/guide/wmt_guide_ps_websearch.pdf>
+* <https://support.webmastertool.naver.com/>
+* <https://webmastertool.naver.com/guide/wmt_guide_ps_websearch.pdf>
