--- a/_posts/2018-05-29-jekyll-자주-사용하는-활용법.markdown
+++ b/_posts/2018-05-29-jekyll-자주-사용하는-활용법.markdown
@@ -6,13 +6,13 @@ categories: jekyll
 출처: jekyll 공식 블로그
 <br><br>
 
-### jekyll 업데이트
+# jekyll 업데이트
 
 {% highlight bash %}
 $ bundle update jekyll
 {% endhighlight %}
 
-### 코드 구문 작성하기
+# 코드 구문 작성하기
 
 {% highlight markdown %}
 {% raw %} {% {% endraw %}highlight ruby{% raw %} %} {% endraw %}
@@ -23,13 +23,13 @@ $ bundle update jekyll
 {% endhighlight %}
 
 
-### 외부 링크 삽입
+# 외부 링크 삽입
 
 {% highlight markdown %}
 <https://jeesub.github.io/>
 {% endhighlight %}
 
-### 이미지 삽입
+# 이미지 삽입
 
 {% highlight markdown %}
 {% raw %}![My image]({{ "/assets/image.jpg" | absolute_url }}) {% endraw %}
