modify a project: 스타트업 인재 매칭 사업

--- a/project/스타트업-인재-매칭-사업.md
+++ b/project/스타트업-인재-매칭-사업.md
@@ -14,7 +14,7 @@ layout: default
 
 ## Problem
 
-당시 우리회사는 신규 인원을 충원하려고 계획 중에 있었다. 
+당시 우리회사도 신규 인원을 충원하려고 계획 중에 있었다. 
 하지만 기존 구인구직 서비스들은 단순 중계에 불과해 우리와 잘 맞는 사람인지 알기 어려웠다. 
 지인 추천으로도 사람을 채용하려 해봤지만 실패율이 높았고, 인재풀이 작았다. 
 다른 스타트업들의 상황도 마찬가지여서 모두들 채용에 어려움을 겪고 있었다. 
@@ -72,10 +72,12 @@ layout: default
 매 달 프로그램을 진행하고 싸이클이 돌 때마다 얻은 피드백을 바탕으로 프로그램을 개선했다. 
 
 첫 프로토타입은 Minimum Viable Product로 만들어 5명의 구직자를 대상으로 진행했다. 
+2회의 소규모 프로그램을 진행한 후 규모를 키워 프로그램을 진행했다. 
 
 ![startup campus]({{"/assets/img/project/startupcampus_3.jpg"}})
 
 매 달 개선하며 프로그램을 성장시켰고, 점점 더 많은 구직자를 대상으로 프로그램을 진행할 수 있었다. 
+2019년 11월까지 1,444명이 프로그램에 참여했고 486명이 스타트업에 취업했다.
 
 ![startup campus]({{"/assets/img/project/startupcampus_4.jpg"}})
 
