add a project: 웹 사이트 이탈률 개선

--- a/project/웹-사이트-이탈률-개선.md
+++ b/project/웹-사이트-이탈률-개선.md
@@ -3,3 +3,69 @@ layout: default
 ---
 
 # 웹 사이트 이탈률 개선
+
+## description
+
+2018년, startupinternz.com과 entshipschool.com 두 웹사이트의 이탈률 개선 프로젝트를 시작했다. 
+startupinternz.com(현재 joinstartup.co.kr)은 스타트업인턴즈(현재 조인스타트업) 프로그램의 참가자 모집을 담당하는 웹사이트이다. 
+2018년 4월 진행된 웹사이트 개편 이후 프로그램 신청자가 줄어들고 있는 상황이었다. 개편 이후 이탈률이 꾸준히 증가하는 추세여서 이탈률 개선 프로젝트를 시작했다. 
+entshipschool.com은 2018년 8월 론칭한 웹사이트로 앙트십 프로그램의 웹브로셔 역할을 하는 웹사이트이다. 
+론칭 이후 높은 이탈률을 유지했기 때문에 이탈률 개선 프로젝트를 진행했다. 
+프로젝트 결과, startupinternz.com의 월 이탈률은 71.79%에서 38.21%로, entshipschool.com의 월 이탈률은 87.26%에서 36.31%로 개선되었다. 
+
+## Problem (STARTUPINTERNZ.COM)
+
+![이탈률 개선]({{"/assets/img/project/bounce_rate_1.jpg"}})
+
+2018년 5월 개편부터 3개월 간의 데이터와 이전 3개월 간의 데이터를 비교했다. 
+페이지뷰 수는 약 40% 감소했고, 이탈률은 약 16% 증가했다. 
+반면 평균 페이지에 머문 시간은 131.39% 증가했다. 
+사용자들은 한 페이지에서 더 많은 시간을 보내지만 다음 페이지로 이동하는 비율이 줄어들었다. 
+더 자세한 분석을 위해 획득 경로 별 데이터를 보았다. 
+
+![이탈률 개선]({{"/assets/img/project/bounce_rate_2.jpg"}})
+
+Organic Search와 Direct에서는 이탈률이 올랐지만 목표3 전환율도 함께 올랐다. 
+목표3은 지원서 양식 다운로드이다. 
+반면 Paid Search와 Other의 이탈률이 상당히 많이 증가했으며, 목표3 전환율도 급감했다. 
+Organic Search와 Direct를 통해 들어오는 사람들은 이미 스타트업인턴즈 프로그램을 인지하고 있는 사람들이고, Paid Search와 Other는 프로그램을 새롭게 접한 사람들로 분류할 수 있다고 생각했다. 
+
+![이탈률 개선]({{"/assets/img/project/bounce_rate_3.jpg"}})
+
+Paid Search와 Other의 이탈률은 5월에 급증하여 지속적으로 유지되는 것을 확인할 수 있다. 
+이 때 Paid Search는 대부분 facebook campaign을 통해 들어오는 사용자들이고, Other는 대부분 스타트업인턴즈의 Naver blog를 통해 들어오는 사용자들이다. 
+홈페이지 개편 이외에 이탈률에 영향을 줄 수 있는 요인으로는 Facebook 광고에서의 변화가 있었다. 
+그래서 광고에서의 변화가 있었는지를 확인했고, 변화가 없었던 것을 확인했다. 
+결국 홈페이지 개편에서 발생한 문제들이라고 결론을 내렸고, 개선 프로젝트를 진행했다. 
+
+## Solve (STARTUPINTERNZ.COM)
+
+1. 종료율이 상당히 높았기 때문에 랜딩 페이지의 콘텐츠를 상당량 교체했다. 홈페이지 운영자가 제공하고 싶은 콘텐츠 대신 방문자들이 필요로 하는 콘텐츠를 배치했다. 
+2. 랜딩 노출 영역의 디자인을 수정했다. 이미지, 문구, 버튼 등을 모두 교체했다. 
+3. drop-down navigation을 도입했다. 메뉴가 7개로 상당히 많았기 때문에 drop-down navigation으로 정리해 사용자가 길을 잃지 않도록 했다. Information Architecture 개선은 개편 프로젝트에서는 무리라고 생각되어 진행하지 않았다. 
+4. 페이지 로딩에 걸리는 시간을 줄이기 위해 랜딩 페이지에 있던 youtube iframe 영상을 이미지로 교체했다. 
+5. mobile navigation의 메뉴 사이에 horizontal bar를 삽입해서 가독성을 높였다. 
+
+![이탈률 개선]({{"/assets/img/project/bounce_rate_4.jpg"}})
+
+프로젝트 진행 이후 이탈률이 71.79%(7월)에서 38.21%(10월)로 개선되었다. 
+
+## Problem (ENTSHIPSCHOOL.COM)
+
+![이탈률 개선]({{"/assets/img/project/bounce_rate_5.jpg"}})
+
+2018년 8월 entshipschool.com을 새로이 론칭했다. 
+하지만 90%에 가까운 이탈률을 보였기 때문에 개선 작업이 필요했다. 
+entshipschool.com은 광고 없이 검색과 기타 채널로만 사용자가 유입되는 점을 감안한다면, 지나치게 높은 이탈률이었다. 
+
+## Solve (ENTSHIPSCHOOL.COM)
+
+1. 방문자의 대부분은 선생님들이고 일과 시간에 PC를 통해 접속하고 있었다. 학교의 컴퓨터들 사양이 좋지 않은 점을 감안해 이미지 파일 크기를 대폭 줄였다. 약간의 퀄리티 감소가 있었으나, 로딩 속도 개선을 위해 희생하기로 했다. 
+2. PC 뷰의 navigation을 fixed-top navigation으로 수정해 스크롤 위치에 상관없이 navigation 메뉴를 클릭할 수 있도록 했다. 
+3. PC 방문시 클릭할 수 있는 영역들을 추가로 배치했다. 랜딩 페이지에 3 개의 버튼을 추가해 페이지의 어디에 있어도 클릭할 수 있는 영역이 존재하도록 했다. 
+4. 클릭 영역에 mouse over action을 추가해 클릭 영역을 명확히 드러나도록 했다. 
+
+![이탈률 개선]({{"/assets/img/project/bounce_rate_6.jpg"}})
+
+entshipschool.com의 경우 PC 방문자가 압도적으로 많았기 때문에 PC 뷰에대한 개선만으로도 상당한 효과를 낼 수 있었다. 
+프로젝트 진행 이후 이탈률이 87.26%(8월)에서 36.31%(12월)로 개선되었다. 
