modify project contents

--- a/project/나와-닮은-기업가-찾기-게임.md
+++ b/project/나와-닮은-기업가-찾기-게임.md
@@ -4,6 +4,14 @@ layout: default
 
 # 나와 닮은 기업가 찾기 게임
 
+## Overview
+
+* Date: 2017
+* Category: [#game](https://www.google.com/search?q=game) [#education](https://www.google.com/search?q=education) [#entrepreneurship](https://www.google.com/search?q=entrepreneurship)
+* Project Size: 6 weeks
+* My Contribution: PM, Game Design
+* Tools: paper prototype
+
 ## Description
 
 2017년 여름 진행한 프로젝트. 
