--- a/project/스타트업-인재-매칭-사업.md
+++ b/project/스타트업-인재-매칭-사업.md
@@ -4,7 +4,14 @@ layout: default
 
 # 스타트업 인재 매칭 사업
 
-## description
+## Overview
+
+* Date: 2016
+* Category: [#business](https://www.google.com/search?q=business)
+* Project Size: 12 weeks
+* My Contribution: Product Manager
+
+## Description
 
 2016년, 신규사업으로 스타트업과 대학생 구직자를 연결해주는 서비스를 구상했다. 
 대학생 구직자들에게 스타트업에서 필요한 기본적인 정보들을 알려주고, 본인과 어울릴 회사를 연결해주는 서비스로 만들었다. 
