--- a/project/실시간-위치기반-소셜커머스-기획.md
+++ b/project/실시간-위치기반-소셜커머스-기획.md
@@ -4,7 +4,15 @@ layout: default
 
 # 실시간 위치기반 소셜커머스 기획
 
-## description
+## Overview
+
+* Date: 2011
+* Category: [#application](https://www.google.com/search?q=application) [#contest](https://www.google.com/search?q=contest)
+* Project Size: 8 weeks
+* My Contribution: Business Build
+* Tools: Powerpoint
+
+## Description
 
 '2011년 고려대 모바일 앱 창업경진대회'에 참가한 프로젝트. 
 5명의 팀원으로 구성되어 진행되었다. 
