--- a/project/웹-사이트-이탈률-개선.md
+++ b/project/웹-사이트-이탈률-개선.md
@@ -4,13 +4,24 @@ layout: default
 
 # 웹 사이트 이탈률 개선
 
-## description
+## Overview
+
+* Date: 2018
+* Category: [#ux](https://www.google.com/search?q=ux) [#marketing](https://www.google.com/search?q=marketing)
+* Project Size: 8 weeks
+* My Contribution: PM, Marketing
+* Tools: Google Analytics
+
+## Description
 
 2018년, startupinternz.com과 entshipschool.com 두 웹사이트의 이탈률 개선 프로젝트를 시작했다. 
+
 startupinternz.com(현재 joinstartup.co.kr)은 스타트업인턴즈(현재 조인스타트업) 프로그램의 참가자 모집을 담당하는 웹사이트이다. 
-2018년 4월 진행된 웹사이트 개편 이후 프로그램 신청자가 줄어들고 있는 상황이었다. 개편 이후 이탈률이 꾸준히 증가하는 추세여서 이탈률 개선 프로젝트를 시작했다. 
+2018년 4월 진행된 웹사이트 개편 이후 프로그램 신청자가 줄어들고 있는 상황이었다. Google Analytics를 살펴보니 웹사이트 개편 이후 이탈률이 꾸준히 증가하는 추세여서 이탈률 개선 프로젝트를 시작했다. 
+
 entshipschool.com은 2018년 8월 론칭한 웹사이트로 앙트십 프로그램의 웹브로셔 역할을 하는 웹사이트이다. 
-론칭 이후 높은 이탈률을 유지했기 때문에 이탈률 개선 프로젝트를 진행했다. 
+론칭 이후 지속적으로 높은 이탈률을 유지했기 때문에 이탈률 개선 프로젝트를 진행했다. 
+
 프로젝트 결과, startupinternz.com의 월 이탈률은 71.79%에서 38.21%로, entshipschool.com의 월 이탈률은 87.26%에서 36.31%로 개선되었다. 
 
 ## Problem (STARTUPINTERNZ.COM)
