modify projects contents

--- a/project/웹-사이트-이탈률-개선.md
+++ b/project/웹-사이트-이탈률-개선.md
@@ -50,7 +50,7 @@ Paid Search와 Other의 이탈률은 5월에 급증하여 지속적으로 유지
 그래서 광고에서의 변화가 있었는지를 확인했고, 변화가 없었던 것을 확인했다. 
 결국 홈페이지 개편에서 발생한 문제들이라고 결론을 내렸고, 개선 프로젝트를 진행했다. 
 
-## Solve (STARTUPINTERNZ.COM)
+## Solution (STARTUPINTERNZ.COM)
 
 1. 종료율이 상당히 높았기 때문에 랜딩 페이지의 콘텐츠를 상당량 교체했다. 홈페이지 운영자가 제공하고 싶은 콘텐츠 대신 방문자들이 필요로 하는 콘텐츠를 배치했다. 
 2. 랜딩 노출 영역의 디자인을 수정했다. 이미지, 문구, 버튼 등을 모두 교체했다. 
@@ -70,7 +70,7 @@ Paid Search와 Other의 이탈률은 5월에 급증하여 지속적으로 유지
 하지만 90%에 가까운 이탈률을 보였기 때문에 개선 작업이 필요했다. 
 entshipschool.com은 광고 없이 검색과 기타 채널로만 사용자가 유입되는 점을 감안한다면, 지나치게 높은 이탈률이었다. 
 
-## Solve (ENTSHIPSCHOOL.COM)
+## Solution (ENTSHIPSCHOOL.COM)
 
 1. 방문자의 대부분은 선생님들이고 일과 시간에 PC를 통해 접속하고 있었다. 학교의 컴퓨터들 사양이 좋지 않은 점을 감안해 이미지 파일 크기를 대폭 줄였다. 약간의 퀄리티 감소가 있었으나, 로딩 속도 개선을 위해 희생하기로 했다. 
 2. PC 뷰의 navigation을 fixed-top navigation으로 수정해 스크롤 위치에 상관없이 navigation 메뉴를 클릭할 수 있도록 했다. 
