modify projects contents

--- a/project/나와-닮은-기업가-찾기-게임.md
+++ b/project/나와-닮은-기업가-찾기-게임.md
@@ -7,7 +7,7 @@ layout: default
 ## Overview
 
 * Date: 2017
-* Category: [#game](https://www.google.com/search?q=game) [#education](https://www.google.com/search?q=education) [#entrepreneurship](https://www.google.com/search?q=entrepreneurship)
+* Category: [#education](https://www.google.com/search?q=education) [#entrepreneurship](https://www.google.com/search?q=entrepreneurship) [#game](https://www.google.com/search?q=game)
 * Project Size: 6 weeks
 * My Contribution: PM, Game Design
 * Tools: paper prototype
