--- a/project/스타트업-인재-매칭-사업.md
+++ b/project/스타트업-인재-매칭-사업.md
@@ -8,7 +8,7 @@ layout: default
 
 * Date: 2016
 * Category: [#business](https://www.google.com/search?q=business)
-* Project Size: 12 weeks
+* Project Size: 3 members, 16 weeks
 * My Contribution: Product Manager
 
 ## Description
