--- a/project/실시간-위치기반-소셜커머스-기획.md
+++ b/project/실시간-위치기반-소셜커머스-기획.md
@@ -8,8 +8,8 @@ layout: default
 
 * Date: 2011
 * Category: [#application](https://www.google.com/search?q=application) [#contest](https://www.google.com/search?q=contest)
-* Project Size: 8 weeks
-* My Contribution: Business Build
+* Project Size: 5 members, 8 weeks
+* My Contribution: Build a Business
 * Tools: Powerpoint
 
 ## Description
