--- a/project/웹-사이트-이탈률-개선.md
+++ b/project/웹-사이트-이탈률-개선.md
@@ -9,7 +9,7 @@ layout: default
 * Date: 2018
 * Category: [#ux](https://www.google.com/search?q=ux) [#marketing](https://www.google.com/search?q=marketing)
 * Project Size: 8 weeks
-* My Contribution: PM, Marketing
+* My Contribution: Marketing, Analysis
 * Tools: Google Analytics
 
 ## Description
