modify projects contents

--- a/project/스타트업-인재-매칭-사업.md
+++ b/project/스타트업-인재-매칭-사업.md
@@ -71,7 +71,7 @@ layout: default
 지원자들은 각 스타트업에 제안서를 작성함으로써 각 기업들에 대해 더 깊이 알게 되었고, 본인의 역량을 보여줄 수 있도록 했다. 
 
 이와 동시에 운영 프로세스를 정립했다. 
-각 스타트업, 지원자와 연락하는 시기, 방식 등을 정리하고 최소한의 리소스로 최대의 효과를 보도록 만들었다. 
+스타트업과 지원자들에게 연락하는 시기와 방식 등을 정리하고 최소한의 리소스로 최대의 효과를 보도록 만들었다. 
 
 ![startup campus]({{"/assets/img/project/startupcampus_2.jpg"}})
 
