--- a/_posts/2018-01-23-linux-기본-명령어.markdown
+++ b/_posts/2018-01-23-linux-기본-명령어.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "linux 기본 명령어"
-categories: [linux, etc]
+categories: [web-development, etc]
 ---
 
 {% highlight bash %}
