update the recent post

--- a/_posts/2020-03-19-미국-대학원-석사-유학-준비하기.markdown
+++ b/_posts/2020-03-19-미국-대학원-석사-유학-준비하기.markdown
@@ -129,6 +129,13 @@ SOP의 분량을 적게 요구하는 학교들은 PHS를 요구하는 경향이 
 PHS도 SOP와 마찬가지로 막막한데, SOP에 적지 않았지만 본인의 강점이 될 수 있는 부분을 적게 되는 것 같다. 
 PHS도 학교 별로 가이드라인을 제공하며, 이에 맞춰 작성해야 한다. 
 
+## RESUME
+
+영문 이력서를 준비해야 한다. 
+대학원 진학용 이력서에는 연락처, 업무 경력, 이수한 주요 수업 등을 적는다. 
+대부분 한 장 이하를 요구했다. 
+영문 이력서 샘플을 검색해보고 비슷한 양식으로 만들면 된다. 
+
 ## PORTFOLIO
 
 Portfolio는 대부분의 학과에서는 필요하지 않다. 
