--- a/_drafts/2020-06-15-미국-대학원-합격-이후-과정.markdown
+++ b/_drafts/2020-06-15-미국-대학원-합격-이후-과정.markdown
@@ -13,7 +13,7 @@ categories: [일상, etc]
 요즘은 많은 은행들이 온라인으로도 발급할 수 있도록 홈페이지에 기능을 마련해 놓았다. 
 
 담당 부서의 승인이 끝나고 나면 DHL 등을 통해 직접 서류를 보내준다. 
-나는 코로나19로 인해 온라인으로 서류를 받았고, 직접 인쇄해서 사용하게 되었다. 
+나는 코로나19로 인해 예외적으로 온라인으로 서류를 받았고, 직접 인쇄해서 사용하게 되었다. 
 
 # SEVIS Fee
 
@@ -43,7 +43,35 @@ SEVIS ID는 I-20 서류에 적혀있다.
 
 # 비자 수수료 납부
 
+DS-160 작성까지 완료하고 나면 드디어 비자 신청이다. 
+
+<https://www.ustraveldocs.com/kr_kr/index.html>
+
+비자 인터뷰 신청에 앞서 비자 수수료를 내야 하는데, 은행에 직접 가서 내는 방법과 온라인 뱅킹으로 납부하는 방법 두 가지가 있다. 
+이 때, 수수료를 납부하는 계좌번호를 잘 적어놓아야 한다. 
+이 계좌번호를 기록해놓지 않은 경우, 비자 인터뷰 신청을 진행할 수 없다. 
+
 # 비자 인터뷰
+
+드디어 비자 인터뷰를 신청할 수 있게 되었다. 
+비자 수수료를 납부할때와 같은 웹사이트에서 비자 인터뷰 신청을 진행하면 된다. 
+
+<https://www.ustraveldocs.com/kr_kr/index.html>
+
+비자 인터뷰에는 필수 서류와 기타 도움이 될만한 서류들을 들고 가야한다. 
+물론 모든 서류들은 영문으로 준비했다. 
+
+가지고 간 서류들 
+1. DS-160 확인 페이지
+2. 여권 (현 여권 및 모든 전 여권)
+3. 비자 사진 한 장 (2” x 2”)
+4. I-20 원본
+5. SEVIS 수수료 납부 영수증
+6. 비자 수수료 신청 납부 영수증
+7. 비자 인터뷰 예약 확인서
+8. 재정 증빙 서류 (잔액, 잔고 증명서 등)
+9. 주민등록등본, 가족관계증명서
+10. 졸업 증명서, 성적 증명서, TOEFL 성적표, GRE 성적표
 
 # Immunization Form
 
@@ -54,3 +82,11 @@ SEVIS ID는 I-20 서류에 적혀있다.
 비용은 학교에서 요구하는 증빙의 갯수와 새로 맞아야 하는 주사의 수에 따라 많이 다르다. 
 예방주사는 수막구균 예방주사가 특히 비싸고, 주로 기숙사생활을 하는 학부생들에게는 필수로 요구한다고 한다. 
 피를 뽑고 사흘에서 나흘정도 후 병원에서 연락이 오면 서류를 받으러 가면 된다. 
+
+# 거래외국환은행 지정
+
+
+
+# 항공권 예약
+
+# 집 구하기
