BVW roun 5 map icons

--- a/_drafts/2020-06-15-미국-대학원-합격-이후-과정.markdown
+++ b/_drafts/2020-06-15-미국-대학원-합격-이후-과정.markdown
@@ -85,8 +85,31 @@ DS-160 작성까지 완료하고 나면 드디어 비자 신청이다.
 
 # 거래외국환은행 지정
 
+유학에 필요한 학비, 생활비를 송금하기 위해서는 거래외국환은행을 지정해야 한다. 
+주로 주거래은행에서 하거나, 수수료가 저렴한 은행에서 한다. 
+나는 수수료가 저렴한 카카오뱅크를 이용했다. 
+은행에서 요구하는 서류들을 제출하면 보통 1 주일 내에 등록이 된다. 
+거래외국환은행은 1 년마다 새로 갱신을 해야한다. 
+
+카카오뱅크 거래외국환은행 지정: <https://blog.kakaobank.com/205>
 
 
 # 항공권 예약
 
+항공권은 가격을 비교해보고 구입하면 된다. 
+유학생은 편도 항공권도 구입이 가능하다. 
+나는 코로나 19로 인해 언제 입국이 가능할지 확신할 수 없어 편도 항공권을 구매했다. 
+일부 항공권은 학생할인이 있고, 나는 학생할인을 받아 구입했다. 
+
 # 집 구하기
+
+off-campus에서 거주하게 될 경우 미리 집을 구해야 한다. 
+학교에서 제공해주는 웹사이트를 이용해보았지만, 부동산 업자들이 제대로 업데이트를 하지 않아 유용성이 많이 떨어졌다. 
+웹사이트를 이용해 집들을 검색해보고 관리회사에 연락하는 방법을 이용했지만, 결국에는 그 지역에 사는 사람의 추천을 받아 집을 구했다. 
+
+이용한 웹사이트들
+
+* http://maps.google.com/
+* https://www.apartments.com/
+* https://www.zillow.com/
+* facebook 학교 그룹
