미국 대학원 합격 이후 과정

--- a/_posts/2020-06-15-미국-대학원-합격-이후-과정.markdown
+++ b/_posts/2020-06-15-미국-대학원-합격-이후-과정.markdown
@@ -13,7 +13,9 @@ categories: [일상, etc]
 요즘은 많은 은행들이 온라인으로도 발급할 수 있도록 홈페이지에 기능을 마련해 놓았다. 
 
 담당 부서의 승인이 끝나고 나면 DHL 등을 통해 직접 서류를 보내준다. 
-나는 코로나19로 인해 예외적으로 온라인으로 서류를 받았고, 직접 인쇄해서 사용하게 되었다. 
+나는 코로나19로 인해 예외적으로 온라인으로 서류를 받았고, 직접 인쇄하고 서명해서 사용하게 되었다. 
+
+잃어버리면 곤란해지는 가장 중요한 서류 중 하나. 
 
 # SEVIS Fee
 
@@ -93,7 +95,6 @@ DS-160 작성까지 완료하고 나면 드디어 비자 신청이다.
 
 카카오뱅크 거래외국환은행 지정: <https://blog.kakaobank.com/205>
 
-
 # 항공권 예약
 
 항공권은 가격을 비교해보고 구입하면 된다. 
@@ -105,7 +106,12 @@ DS-160 작성까지 완료하고 나면 드디어 비자 신청이다.
 
 off-campus에서 거주하게 될 경우 미리 집을 구해야 한다. 
 학교에서 제공해주는 웹사이트를 이용해보았지만, 부동산 업자들이 제대로 업데이트를 하지 않아 유용성이 많이 떨어졌다. 
-웹사이트를 이용해 집들을 검색해보고 관리회사에 연락하는 방법을 이용했지만, 결국에는 그 지역에 사는 사람의 추천을 받아 집을 구했다. 
+나중에 알게 되었지만 학생들은 주로 facebook 그룹을 통해 룸메이트를 구하는 것 같았다. 
+웹사이트를 이용해 집들을 검색해보고 관리회사에 연락하는 방법을 이용했지만 효과적이지는 않았고, 결국에는 그 지역에 사는 사람의 추천을 받아 집을 구했다. 
+나는 미국에서의 신용이 없기 때문에, 몇 달치 월세를 보증금으로 선지급했다. 
+집을 구하는 것은 고려해야할 것들이 많기 때문에 신중해야 할 것 같다. 
+한국도 마찬가지겠지만 집의 하자, 잦은 공사, 쥐, 바퀴벌레, 베드 버그, 시끄러운 이웃, 못된 집 주인 등 갈등의 요소들이 많이 기다리고 있다. 
+학교에서는 housing 관련 갈등에 대해 조언해주는 부서를 운영하기도 한다. 
 
 이용한 웹사이트들
 
@@ -113,3 +119,8 @@ off-campus에서 거주하게 될 경우 미리 집을 구해야 한다.
 * https://www.apartments.com/
 * https://www.zillow.com/
 * facebook 학교 그룹
+
+# 출국
+
+I-20의 프로그램 시작 30 일 전부터 미국 입국이 가능하다. 
+준비한 서류와 여권을 가지고 출국하면 된다. 
